--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Student Name - Boan</title>
 
 <meta name="viewport" content="width=device-width"/>
-<meta name="description" content="ePortfolio for Student Name."/>
+<meta name="description" content="Boan for Student Name."/>
 <meta charset="UTF-8"> 
 
 <link type="text/css" rel="stylesheet" href="style.css">
@@ -26,10 +26,10 @@
 		
 		<div id="contactDetails" class="quickFade delayFour">
 			<ul>
-				<li>#: s1234567</li>
-				<li>e: <a href="mailto:student@rmit.edu.au" target="_blank">student@rmit.edu.au</a></li>
+				<li>#: s3811618</li>
+				<li>e: <a href="mailto:s3811618@rmit.edu.au" target="_blank">student@rmit.edu.au</a></li>
 				<li>w: <a href="http://www.github.com">www.github.com/</a></li>
-				<li>m: +61 012 345 678</li>
+				<li>m: +61 0421523359</li>
 			</ul>
 		</div>
 		<div class="clear"></div>
