--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		
 		<div id="name">
 			<h1 class="quickFade delayTwo">Student Name</h1>
-			<h2 class="quickFade delayThree">ePortfolio</h2>
+			<h2 class="quickFade delayThree">Boan Cao</h2>
 		</div>
 		
 		<div id="contactDetails" class="quickFade delayFour">
