--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 		<div id="contactDetails" class="quickFade delayFour">
 			<ul>
 				<li>#: s3811618</li>
-				<li>e: <a href="mailto:s3811618@rmit.edu.au" target="_blank">student@rmit.edu.au</a></li>
-				<li>w: <a href="http://www.github.com">www.github.com/</a></li>
+				<li>e: <a href="mailto:s3811618@student.rmit.edu.au" target="_blank">s3811618@student.rmit.edu.au</a></li>
+				<li>w: <a href="https://boan10.github.io/">https://boan10.github.io//</a></li>
 				<li>m: +61 0421523359</li>
 			</ul>
 		</div>
