--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 		
 		<div id="contactDetails" class="quickFade delayFour">
 			<ul>
-				<li>#: s3811618</li>
-				<li>e: <a href="mailto:s3811618@student.rmit.edu.au" target="_blank">s3811618@student.rmit.edu.au</a></li>
-				<li>w: <a href="https://boan10.github.io/">https://boan10.github.io//</a></li>
-				<li>m: +61 0421523359</li>
+				<li>student number: s3811618</li>
+				<li>email: <a href="mailto:s3811618@student.rmit.edu.au" target="_blank">s3811618@student.rmit.edu.au</a></li>
+				<li>w.: <a href="https://boan10.github.io/">https://boan10.github.io//</a></li>
+				<li>phone number: +61 0421523359</li>
 			</ul>
 		</div>
 		<div class="clear"></div>
