--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div id="cv" class="instaFade">
 	<div class="mainDetails">
 		<div id="headshot" class="quickFade">
-			<img src="WechatIMG75.jpeg" alt="Student Name" width="200" height="150" />
+			<img src="photo1.jpeg" alt="Student Name" width="200" height="150" />
 		</div>
 		
 		<div id="name">
