--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				</div>
 				
 				<div class="sectionContent">
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dolor metus, interdum at scelerisque in, porta at lacus. Maecenas dapibus luctus cursus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultricies massa et erat luctus hendrerit. Curabitur non consequat enim. Vestibulum bibendum mattis dignissim. Proin id sapien quis libero interdum porttitor.</p>
+					<p>Hello, my name is Boan Cao. I am 19 years old. I am currently studying at IT BP162 and this is the first semester for my universty study. I am an international student. I was born and grow up in the China. I like playing basketball and games(Especially League of Legends).</p>
 				</div>
 			</article>
 			<div class="clear"></div>
