--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 				
 				<div class="sectionContent">
 					<p>Hello, my name is Boan Cao. I am 19 years old. I am currently studying at IT BP162 and this is the first semester for my universty study. I am an international student. I was born and grow up in the China. I like playing basketball and games(Especially League of Legends).</p>
+				        <img src="photo2.jpeg"/>
 				</div>
 			</article>
 			<div class="clear"></div>
