--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				</div>
 				
 				<div class="sectionContent">
-					<p>Hello, my name is Boan Cao. I am 19 years old. I am currently studying at IT BP162 and this is the first semester for my universty study. I am an international student. I was born and grow up in the China. I like playing basketball and games(Especially League of Legends).</p>
+					<p>Hello, my name is Boan Cao. I am 19 years old. I am currently studying at IT BP162 and this is the first semester for my universty study. I am also an international student. I was born and grew up in Beijing, China, which is a very beautiful and modern city. I like playing basketball and games(Especially League of Legends). I also love watching anime.</p>
 				        <img src="photo2.jpeg" width="300" height="150"/>
 				</div>
 			</article>
