--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				</div>
 				
 				<div class="sectionContent">
-					<p>Hello, my name is Boan Cao. I am 19 years old. I am currently studying at IT BP162 and this is the first semester for my universty study. I am also an international student. I was born and grew up in Beijing, China, which is a very beautiful and modern city. I can speak Mandarin and English as well. I like playing basketball and games(Especially League of Legends). I also love watching anime.</p>
+					<p>•Hello, my name is Boan Cao. I am 19 years old. I am currently studying at IT BP162 and this is the first semester for my universty study. I am also an international student. I was born and grew up in Beijing, China, which is a very beautiful and modern city. I can speak Mandarin and English as well. I like playing basketball and games(Especially League of Legends). I also love watching anime.</p>
 				        <img src="photo2.jpeg" width="350" height="200"/>
 				</div>
 			</article>
@@ -57,7 +57,7 @@
 				</div>
 				
 				<div class="sectionContent">
-					<p>At a time when the Internet and computers were not as popular as they are today. My father brought me to the internet and computers, so I had a keen interest in these from a young age. That's why I chose to study IT. To this day programming is something that interests me more because in my eyes it can achieve anything. Nowadays we can't live without the internet and I believe it will become more and more important in the future.</p>
+					<p>•At a time when the Internet and computers were not as popular as they are today. My father brought me to the internet and computers, so I had a keen interest in these from a young age. That's why I chose to study IT. To this day programming is something that interests me more because in my eyes it can achieve anything. Nowadays we can't live without the internet and I believe it will become more and more important in the future.</p>
 				</div>
 			</article>
 			<div class="clear"></div>
