--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 				</div>
 				
 				<div class="sectionContent">
-					<p>•At a time when the Internet and computers were not as popular as they are today. My father brought me to the internet and computers, so I had a keen interest in these from a young age. That's why I chose to study IT. To this day programming is something that interests me more because in my eyes it can achieve anything. Nowadays we can't live without the internet and I believe it will become more and more important in the future.</p>
+					<p>•At a time when the Internet and computers were not as popular as they are today. My father brought me to the internet and computers, so I had a keen interest in these from a young age. That's why I chose to study IT. To this day programming is something that interests me more because in my view it can achieve anything. Nowadays we can't live without the internet and IT. I believe it will become more and more important in the future.</p>
 				</div>
 			</article>
 			<div class="clear"></div>
