--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 					<h2>Job Title</h2>
 					<h3>Description</h3>
 					<img src="photo2.jpeg" width="300" height="200"/>
-					<p>This is a software programmer position and is part of the developer. What appeals to me is that it is a continuous job. Firstly, it requires software programming and is developed in a team. Then it needs to be improved and refined slowly. This process is also attractive to me. href=https://www.seek.com.au/job/53388971?type=standard#searchRequestToken=47452d76-b1c0-437f-871f-567bf8c8a8e9 </p>
+					<p>This is a software programmer position and is part of the developer. What appeals to me is that it is a continuous job. Firstly, it requires software programming and is developed in a team. Then it needs to be improved and refined slowly. This process is also attractive to me. <a href="https://www.seek.com.au/job/53388971?type=standard#searchRequestToken=47452d76-b1c0-437f-871f-567bf8c8a8e9">https://www.seek.com.au/job/53388971?type=standard#searchRequestToken=47452d76-b1c0-437f-871f-567bf8c8a8e9</a> </p>
 					<h3>Skills I have</h3>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultricies massa et erat luctus hendrerit. Curabitur non consequat enim. Vestibulum bibendum mattis dignissim. Proin id sapien quis libero interdum porttitor.</p>
 					<h3>Skills I Need</h3>
