--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 					<img src="photo2.jpeg" width="400" height="200"/>
 					<p>This is a software programmer position and is part of the developer. What appeals to me is that it is a continuous job. Firstly, it requires software programming and is developed in a team. Then it needs to be improved and refined slowly. This process is also attractive to me. <a href="https://www.seek.com.au/job/53388971?type=standard#searchRequestToken=47452d76-b1c0-437f-871f-567bf8c8a8e9">https://www.seek.com.au/job/53388971?type=standard#searchRequestToken=47452d76-b1c0-437f-871f-567bf8c8a8e9</a> </p>
 					<h3>Skills I have</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultricies massa et erat luctus hendrerit. Curabitur non consequat enim. Vestibulum bibendum mattis dignissim. Proin id sapien quis libero interdum porttitor.</p>
+					<p>So far my professional skills are few and immature. I know some programming languages such as java, python, but not enough to do more difficult work, so I have a lot to learn. And I have no experience in this area.</p>
 					<h3>Skills I Need</h3>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultricies massa et erat luctus hendrerit. Curabitur non consequat enim. Vestibulum bibendum mattis dignissim. Proin id sapien quis libero interdum porttitor.</p>
 					<h3>Learning Plan</h3>
