--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
 					<h3>Skills I have</h3>
 					<p>So far my professional skills are few and immature. I know some programming languages such as java, python, but not enough to do more difficult work, so I have a lot to learn. And I have no experience in this area.</p>
 					<h3>Skills I Need</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultricies massa et erat luctus hendrerit. Curabitur non consequat enim. Vestibulum bibendum mattis dignissim. Proin id sapien quis libero interdum porttitor.</p>
+					<p>This position requires knowledge of coding languages - VBA, MS Access and SQL. Not only computer infrastructure is required but also excellent database administration skills and experience.</p>
 					<h3>Learning Plan</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultricies massa et erat luctus hendrerit. Curabitur non consequat enim. Vestibulum bibendum mattis dignissim. Proin id sapien quis libero interdum porttitor.</p>
+					<p>Firstly, you need to learn the coding language - VBA, MS Access and SQL, etc. Secondly, I need to have knowledge of databases and database management, which is something I need to learn. Finally, software programming is also very important.</p>
 				</article>
 				
 			</div>
