--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 					<h3>Skills I Need</h3>
 					<p>This position requires knowledge of coding languages - VBA, MS Access and SQL. Not only computer infrastructure is required but also excellent database administration skills and experience.</p>
 					<h3>Learning Plan</h3>
-					<p>Firstly, you need to learn the coding language - VBA, MS Access and SQL, etc. Secondly, I need to have knowledge of databases and database management, which is something I need to learn. Finally, software programming is also very important.</p>
+					<p>Firstly, you need to learn the coding language - VBA, MS Access and SQL, etc. Secondly, I need to have knowledge of databases and database management, which is something I need to learn. Finally, software programming is also very important. I don't have enough mature skills or experience for now, so it would be a good experience to do some projects in my future studies</p>
 				</article>
 				
 			</div>
