--- a/index.html
+++ b/index.html
@@ -94,14 +94,14 @@
 			
 			<div class="sectionContent">
 				<ul class="keySkills">
-					<li>A Key Skill</li>
-					<li>A Key Skill</li>
-					<li>A Key Skill</li>
-					<li>A Key Skill</li>
-					<li>A Key Skill</li>
-					<li>A Key Skill</li>
-					<li>A Key Skill</li>
-					<li>A Key Skill</li>
+					<li>Demonstrated knowledge of our preferred coding languages – VBA, MS Access and SQL</li>
+					<li>Understanding of computer infrastructure</li>
+					<li>Efficient and accurate coder, along with excellent database management skills</li>
+					<li>Collaborative</li>
+					<li>Strong independent work ethic, with accountability for work performed</li>
+					<li>Attention to detail</li>
+					<li>Problem solver and proactive in identifying solutions</li>
+					<li>Project management skills</li>
 				</ul>
 			</div>
 			<div class="clear"></div>
