--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ Overly Competitive – Adventurers can escalate small things into intense compet
 Fluctuating Self-Esteem – It’s demanded that skills be quantified, but that’s hard to do with Adventurers’ strengths of sensitivity and artistry. Adventurers’ efforts are often dismissed, a hurtful and damaging blow, especially early in life. Adventurers can start to believe the naysayers without strong support.</p>
 					<h3>Team Composition</h3>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultricies massa et erat luctus hendrerit. Curabitur non consequat enim. Vestibulum bibendum mattis dignissim. Proin id sapien quis libero interdum porttitor.</p>
-					<p><img src="mbti_results.png" alt="MBTI Results" /></p>
+					<p><img src="photo3.jpeg" alt="MBTI Results" /></p>
 				</article>
 				
 				<article>
