--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ If you are a visual learner, you learn by reading or seeing pictures. You unders
 				<article>
 					<h2>Test Three</h2>
 					<p class="subDetails">Big 5 Factors</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultricies massa et erat luctus hendrerit. Curabitur non consequat enim. Vestibulum bibendum mattis dignissim. Proin id sapien quis libero interdum porttitor.</p>
+					<p><img src="photo4.jpeg" alt="MBTI Results" /></p>
 				</article>
 			</div>
 			<div class="clear"></div>
