--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ Easily Stressed – Adventurers live in the present, full of emotion. When situa
 Overly Competitive – Adventurers can escalate small things into intense competitions, turning down long-term success in their search for glory in the moment, and are unhappy when they lose.
 Fluctuating Self-Esteem – It’s demanded that skills be quantified, but that’s hard to do with Adventurers’ strengths of sensitivity and artistry. Adventurers’ efforts are often dismissed, a hurtful and damaging blow, especially early in life. Adventurers can start to believe the naysayers without strong support.</p>
 					<h3>Team Composition</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultricies massa et erat luctus hendrerit. Curabitur non consequat enim. Vestibulum bibendum mattis dignissim. Proin id sapien quis libero interdum porttitor.</p>
+					<p>The results of these tests give a clearer indication of personality and learning. It can give me a clearer picture of myself and my strengths and weaknesses. In terms of teamwork, I probably prefer to be organised and would like someone else to lead the team. At the same time, I have to communicate more to face others, and I hope to improve and complement with others.</p>
 					<p><img src="photo3.jpeg" alt="MBTI Results" /></p>
 				</article>
 				
