--- a/index.html
+++ b/index.html
@@ -158,32 +158,32 @@ If you are a visual learner, you learn by reading or seeing pictures. You unders
 			<div class="sectionContent">
 				<article>
 					<h2>Overview</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultricies massa et erat luctus hendrerit. Curabitur non consequat enim.</p>
+					<p>An umbrella that can act like a self-driving car could be an effective solution to the inconvenience of travelling in rainy weather.</p>
 				</article>
 
 				<article>
 					<h2>Motivation</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultricies massa et erat luctus hendrerit. Curabitur non consequat enim.</p>
+					<p>Most people don't like travelling in the rain. Not only because of the cold and wet, but also because of the inconvenience of travelling. Umbrellas are essential for travelling in the rain, but they are very inconvenient to hold on to yourself. You also have to be aware of tree branches, pedestrians and their umbrellas on the road to avoid collisions.</p>
 				</article>
 				
 				<article>
 					<h2>Description</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dolor metus, interdum at scelerisque in, porta at lacus. Maecenas dapibus luctus cursus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultricies massa et erat luctus hendrerit. Curabitur non consequat enim. Vestibulum bibendum mattis dignissim. Proin id sapien quis libero interdum porttitor.</p>
+					<p></p>
 				</article>
 
 				<article>
 					<h2>Tools and Technologies</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultricies massa et erat luctus hendrerit. Curabitur non consequat enim. Vestibulum bibendum mattis dignissim. Proin id sapien quis libero interdum porttitor.</p>
+					<p></p>
 				</article>
 
 				<article>
 					<h2>Skills Required</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultricies massa et erat luctus hendrerit. Curabitur non consequat enim.</p>
+					<p></p>
 				</article>
 
 				<article>
 					<h2>Outcome</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultricies massa et erat luctus hendrerit. Curabitur non consequat enim.</p>
+					<p></p>
 				</article>
 			</div>
 			<div class="clear"></div>
