--- a/index.html
+++ b/index.html
@@ -168,7 +168,8 @@ If you are a visual learner, you learn by reading or seeing pictures. You unders
 				
 				<article>
 					<h2>Description</h2>
-					<p></p>
+					<p>My project idea is a smart umbrella that can avoid obstacles like a self-driving car.</p>
+					<p>Firstly, it is very inconvenient to travel in the rain with one hand on the umbrella. So the umbrella needs to be able to hover right above a person's head and be able to recognise the user's position and keep track of it, so that it can follow the user at all times. My idea is that the user could carry a reader on his or her person that could be connected to the umbrella to identify the user's location. I think it would be possible to attach a drone like propeller to the umbrella so that it can stay aloft and adjust its height.</p>
 				</article>
 
 				<article>
