--- a/index.html
+++ b/index.html
@@ -170,6 +170,8 @@ If you are a visual learner, you learn by reading or seeing pictures. You unders
 					<h2>Description</h2>
 					<p>My project idea is a smart umbrella that can avoid obstacles like a self-driving car.</p>
 					<p>Firstly, it is very inconvenient to travel in the rain with one hand on the umbrella. So the umbrella needs to be able to hover right above a person's head and be able to recognise the user's position and keep track of it, so that it can follow the user at all times. My idea is that the user could carry a reader on his or her person that could be connected to the umbrella to identify the user's location. I think it would be possible to attach a drone like propeller to the umbrella so that it can stay aloft and adjust its height.</p>
+					<p>Secondly, we need to be aware of obstacles such as branches or buildings, as well as pedestrians and their umbrellas on the road. We sometimes need to adjust the height and position of the umbrella to avoid scrapes. I think it is possible to add a 360 degree camera and processor to the umbrella. The camera takes live footage and sends the data to the processor, which determines the obstacle and adjusts the height and position with the propeller. This would enable automatic obstacle avoidance.</p>
+					<p><img src="photo5.jpeg"/></p>
 				</article>
 
 				<article>
