--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ If you are a visual learner, you learn by reading or seeing pictures. You unders
 
 				<article>
 					<h2>Tools and Technologies</h2>
-					<p></p>
+					<p>The canopy, propellers, cameras, sensors and processors are the main hardware tools. The key technology lies in the sensing technology of the surrounding information, the high sensitivity and high performance of the various sensors and information processing technology of artificial intelligence that replaces the five human senses.</p>
 				</article>
 
 				<article>
