--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ If you are a visual learner, you learn by reading or seeing pictures. You unders
 
 				<article>
 					<h2>Skills Required</h2>
-					<p></p>
+					<p>The need for a system or program that allows the processor to automatically identify obstacles and avoid them is key to this project. I think it is very feasible to make a project, but it is still difficult to develop and mature.</p>
 				</article>
 
 				<article>
