--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ If you are a visual learner, you learn by reading or seeing pictures. You unders
 
 				<article>
 					<h2>Outcome</h2>
-					<p></p>
+					<p>If this project is successful and mature, it will greatly facilitate our travel in the rain. However, I think that the price may affect the demand for this project, so it will be a long time before this project can really happen.</p>
 				</article>
 			</div>
 			<div class="clear"></div>
