--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 		
 		<section>
 			<div class="sectionTitle">
-				<h1>Key Skills</h1>
+				<h3>Key Skills For this Job</h3>
 			</div>
 			
 			<div class="sectionContent">
