--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				</div>
 				
 				<div class="sectionContent">
-					<p>Hello, my name is Boan Cao. I am 19 years old. I am currently studying at IT BP162 and this is the first semester for my universty study. I am also an international student. I was born and grew up in Beijing, China, which is a very beautiful and modern city. My native langueage is Mandarin, I also can speak English and little bit Japanese as well. I like playing basketball and games(Especially League of Legends). I also love watching anime.</p>
+					<p>Hello, my name is Boan Cao. I am 19 years old. I am currently studying at IT BP162 as an international student and this is the first semester for my universty study. I was born and grew up in Beijing, China, which is a very beautiful and modern city. My native langueage is Mandarin, I can also speak English and little bit Japanese as well. I like playing basketball and games(Especially League of Legends). I also love watching anime.</p>
 				</div>
 			</article>
 			<div class="clear"></div>
