--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				</div>
 				
 				<div class="sectionContent">
-					<p>•At a time when the Internet and computers were not as popular as they are today. My father took me into the field of internet and computers when I was young, therefore I bacame interested in computers from that time. That's why I chose to study IT. To this day programming is something that interests me more because in my view it can achieve anything. Nowadays we can't live without the internet and IT. I believe it will become more and more important in the future.</p>
+					<p>•At a time when the Internet and computers were not as popular as they are today. My father took me into the field of internet and computers when I was young, therefore I bacame interested in computers from that time. This is the reason that I chose to study IT for my first degree. To this day programming is something that interests me more because in my view it can achieve anything. Nowadays we can't live without the internet and IT. I believe it will become more and more important in the future.</p>
 					<p>•I heard that RMIT has good IT resources and rankings. My friend recommended RMIT's IT program to me. For me RMIT is indeed a good and excellent choice.</p>
 					<p>•I hope that my time at RMIT will give me a deeper understanding and learning about IT. For example, programming and artificial intelligence etc. It will allow me to feel more interested in IT and at the same time keep me motivated for my future studies.</p>
 				</div>
